[package]
name = "container-registry-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "container-registry-gateway-server"
path = "src/bin/server.rs"

[dependencies]
axum = "0.5.14"
config = "0.13.2"
hyper = { version = "0.14.20", features = ["full"] }
hyper-rustls = { version = "0.23.0", features = ["webpki-roots"] }
regex = "1.6.0"
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.20.1", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.36"
tracing-futures = "0.2.3"
tracing-subscriber = "0.3.15"
