[package]
name = "container-registry-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "container-registry-gateway-server"
path = "src/bin/server.rs"

[dependencies]
axum = "0.5.17"
config = "0.13.3"
hyper = { version = "0.14.23", features = ["full"] }
hyper-rustls = { version = "0.23.2", features = ["webpki-roots"] }
regex = "1.7.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.24.2", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-futures = "0.2.3"
tracing-subscriber = "0.3.16"
